# StrongType

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
.cache/clangd/index/: comparable_feature.hpp.B84CB19CAC443E27.idx  main.cpp.46AA32E54A724C16.idx  output_streamable_feature.hpp.38CC418C838247CC.idx  strong_type.hpp.ACEBDA2174151795.idx  threeway_comparable_feature.hpp.1EB4B2AB0C9EE616.idx
include/strong_types/: strong_type.hpp
include/strong_types/features/: comparable.hpp  comparable_feature.hpp  decrement.hpp  decrement_feature.hpp  equality.hpp  equality_feature.hpp  increment.hpp  increment_feature.hpp  output_streamable.hpp  threeway_comparable.hpp  threeway_comparable_feature.hpp
include/strong_types/features/arithmetic/: addition_feature.hpp  division_feature.hpp  modulus_feature.hpp  multiplication_feature.hpp  subtraction_feature.hpp
include/strong_types/features/binary/: and_feature.hpp  not_feature.hpp  or_feature.hpp  xor_feature.hpp
include/strong_types/features/logical/: conjunction_feature.hpp  disjunction_feature.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/test_strong_types/: CMakeLists.txt
tests/test_strong_types/test_features/: CMakeLists.txt  test_binary_features.cpp  test_features.hpp
